scss build scripts Toast Script add

--- a/_includes/common/links.liquid
+++ b/_includes/common/links.liquid
@@ -1,5 +1,5 @@
 {%- comment %} dns-prefetch {% endcomment %}
-<link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+<link rel="dns-prefetch" href="https://urfish.github.io">
 
 {%- comment %} canonical link {% endcomment -%}
 {%- if prev -%}
