--- a/_sass/lib/@primer/css/utilities/colors.scss
+++ b/_sass/lib/@primer/css/utilities/colors.scss
@@ -6,6 +6,9 @@
 .bg-white {
   background-color: $bg-white !important;
 }
+.bg-black {
+  background-color: $bg-black !important;
+}
 /* Set the background to $bg-blue */
 .bg-blue {
   background-color: $bg-blue !important;
