--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -29,6 +29,7 @@
 @import "core/title";
 @import "core/markdown";
 @import "core/toasts";
+@import "core/toast";
 
 // improved
 @import "direction";
