--- a/_includes/common/rest/variables.liquid
+++ b/_includes/common/rest/variables.liquid
@@ -28,7 +28,7 @@
 {%- if site.debug -%}
     {%- assign base = site.baseurl -%}
 {%- else -%}
-    {%- assign base = "https://cdn.jsdelivr.net/gh/" | append: theme_alias -%}
+    {%- assign base = "https://urfish.github.io/docs" | append: theme_alias -%}
 {%- endif -%}
 
 {% comment %} extra {% endcomment %}
