--- a/_layouts/tasks/shortcodes.liquid
+++ b/_layouts/tasks/shortcodes.liquid
@@ -1,6 +1,6 @@
 {%- include common/rest/i18n.liquid -%}
 
-{%- assign shortcodes = "mermaid, warning, note, tip, danger" | split: ", " -%}
+{%- assign shortcodes = "mermaid, warning, note, tip, danger, notice" | split: ", " -%}
 
 {%- if site.debug.shortcodes == false -%}
     {{ content }}
