--- a/_includes/templates/_toctree.liquid
+++ b/_includes/templates/_toctree.liquid
@@ -40,4 +40,4 @@
     {%- endfor -%}
 </ul>
 
-<div style='position: fixed;left: 50px;top: 90%;background-color: rgba(0, 0, 0, 0); font-size: 80px' onclick='window:open("https://urfish.github.io/docs/emoji.html","","_blank");'>😀</div>
+<div style='position: fixed;left: 50px;top: 90%;background-color: rgba(0, 0, 0, 0); font-size: 80px' onclick='window:open("https://urfish.github.io/docs/emoji","","_blank");'>😀</div>
